--- a/CourceProject/Components/Pages/Authorization.razor
+++ b/CourceProject/Components/Pages/Authorization.razor
@@ -43,7 +43,7 @@
     private string? decryptedPassword;
     [SupplyParameterFromForm]
     private UserAthirization _userAuthorization { get; set; } = new();
-    protected override async void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         users = await _listUsers.GetUsers();
     }
@@ -59,7 +59,7 @@
                 await _listUsers.UpdateUser(user);
                 toastService.ShowSuccess("Вы успешно авторизовались под пользователем " + _userAuthorization.Name);
                 await SaveLocalStorage();
-                logger.LogInformation("Сохранение имени и Id пользователя {" + _userAuthorization.Name + "} в sessionStorage");
+                logger.LogInformation("Сохранение имени и Id пользователя {" + _userAuthorization.Name + "} в sessionStorage при авторизации");
                 navigationManager.NavigateTo("/PasswordManager");
             }
             else
@@ -91,8 +91,8 @@
             {
                 user = new();                
                 user = userSearch;
-                toastService.ShowInfo("Пользователь с таким именем и паролем найден в системе");
-                logger.LogInformation("Пользователь с именем {" +userSearch.Name + "} найден в системе");
+                // toastService.ShowInfo("Пользователь с таким именем и паролем найден в системе");
+                // logger.LogInformation("Пользователь с именем {" +userSearch.Name + "} найден в системе");
                 flag = true;
             }
         }
