--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -122,7 +122,6 @@ else
 @code {
     private string _pageTitle = "Вы вошли под пользователем ";
     private int? _userId;
-    private int? _accountId;
     private string? _nameUser;
     private IEnumerable<Account> accounts = new List<Account>();
     private Account _newAccount = new();
@@ -131,8 +130,8 @@ else
     private string? xxx="*******";
     private int selectedNumber;
     private bool isConnected;
-    private string? encryptedPassword;
-    private string? decryptedPassword;
+    //private string? encryptedPassword;
+    //private string? decryptedPassword;
     private bool checkedValue;
     private List<Account>  arrAccountsDelete = new List<Account>();
     protected override async void OnInitialized()
