--- a/CourceProject/Components/Pages/Error.razor
+++ b/CourceProject/Components/Pages/Error.razor
@@ -31,6 +31,7 @@
     private string? RequestId { get; set; }
     private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
 
-    protected override void OnInitialized() =>
+    protected override async Task OnInitializedAsync() =>
         RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
+     
 }
