--- a/CourceProject/Components/App.razor
+++ b/CourceProject/Components/App.razor
@@ -7,7 +7,8 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="app2.css" />
+    <link rel="stylesheet" href="appForm.css" />
+    <link rel="stylesheet" href="appTable.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="CourceProject.styles.css" />
