--- a/CourceProject/Components/Pages/Authorization.razor
+++ b/CourceProject/Components/Pages/Authorization.razor
@@ -69,7 +69,7 @@
                 _userId = user!.Id;
                 user.LastLoginDate = DateTime.Now;
                 await _listUsers.UpdateUser(user);
-                toastService.ShowSuccess("Вы успешно авторизовались под пользователем " + _userAuthorization.Name);
+                toastService.ShowSuccess("Вы успешно авторизовались под пользователем '" +_userAuthorization.Name + "'");
                 await SaveLocalStorage();
                 logger.LogInformation("Сохранение имени и Id пользователя {" + _userAuthorization.Name + "} в sessionStorage при авторизации");
                 navigationManager.NavigateTo("/PasswordManager");
