--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -12,115 +12,123 @@
 
 @rendermode InteractiveServer
 
-<p> Менеджер паролей </p>
-@if (isConnected)
-{
-    if (@_userId==0)
+
+    @if (isConnected)
     {
-        toastService.ShowError("Пожалуйста авторизуйтесь!");
-        navigationManager.NavigateTo("/Authorization");
+        if (@_userId == 0)
+        {
+            toastService.ShowError("Пожалуйста авторизуйтесь!");
+            navigationManager.NavigateTo("/Authorization");
+        }
+        else
+        {
+            <div class="userId" style="color:white; background:#42AAFF">
+                <span> Вы вошли под пользователем - "@_nameUser"</span>
+                <br/>
+                <span> userId - "@_userId" </span>
+            </div>
+            <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей</h1>
+               
+                <br/>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
+            <button style="background:#18db66; width:400px; font-size:20px" class="glow-on-hover" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя "@_nameUser" </button>
+                </div>
+                <h2 style="color:blueviolet; font-style:oblique">Список аккаунтов:</h2>
+                <table class="table_dark">
+                    <thead>
+                        <tr>
+                            <th>Ресурс</th>
+                            <th>Логин</th>
+                            <th>Пароль</th>
+                            <th>Кнопка пароля</th>
+                            <th>Смена пароля рандомно</th>
+                            <th>Длина смены пароля</th>
+                            <th>Удаление</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (Account account in accounts)
+                        {
+                            <tr>
+                                <td>
+                                    @account.Source
+                                </td>
+                                <td>@account.Login</td>
+                                @if (flag && accountId == account.Id)
+                                {
+                                    @if (account.Password!.Length > 16)
+                                    {
+                                        <td>@passwordEncryptor.Decrypt(account.Password);</td>
+                                    }
+                                    else
+                                    {
+                                        <td>@account.Password;</td>
+                                    }
+                                }
+                                else
+                                {
+                                    <td>@xxx</td>
+                                }
+                                <td>
+                                    <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать</button>
+                                </td>
+                                <td>
+                                    <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
+                                </td>
+                                <td>
+                                    <select @bind="selectedNumber" placeholder="6">
+                                        @for (int i = 6; i < 16; i++)
+                                        {
+                                            <option> @i</option>
+                                        }
+                                    </select>
+                                </td>
+                                <td>
+                            <Button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>DeleteAccount(account))">Удалить</Button>
+                                </td>
+                            </tr>
+                        }
+                        <tr>
+                            <td>
+                                <InputText @bind-Value=@_newAccount.Source  placeholder="введите новый ресурс "/>
+                            </td>
+                            <td>
+                                <InputText @bind-Value=@_newAccount.Login placeholder="введите логин" />
+                            </td>
+                            <td>
+                                <InputText @bind-Value=@_newAccount.Password placeholder="введите пароль" />
+                            </td>
+                            <td></td>
+                            <td>
+                        <button style="background:#1b6ec2" class="glow-on-hover" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
+                            </td>
+                            <td>
+                                <select @bind="selectedNumber" >
+                                    @for (int i = 6; i < 16; i++)
+                                    {
+                                        <option> @i</option>
+                                    }
+                                </select>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br />
+                <br />
+                <div>
+            <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
+                </div>
+                <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
+
+        }
     }
     else
     {
-        <p>@_pageTitle - "@_nameUser"</p>
-        <p>userId - "@_userId" </p>
-        <h1>Список аккаунтов</h1>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
-            <button class="btn btn-1" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя </button>
-          
-        </div>
-        <br />
-        <button class="btn btn-3" id="exit" @onclick="Exit">Выйти</button>
-        <br />
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Ресурс</th>
-                    <th>Логин</th>
-                    <th>Пароль</th>
-                    <th>Показ пароля</th>
-                    <th>Смена пароля рандомно</th>
-                    <th>Длина смены пароля</th>
-                    <th>Удаление</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (Account account in accounts)
-                {
-                    <tr>                       
-                        <td> 
-                            @account.Source
-                        </td>
-                        <td>@account.Login</td>
-                        @if (flag && accountId == account.Id)
-                        {
-                            @if (account.Password!.Length > 16)
-                            {
-                                <td>@passwordEncryptor.Decrypt(account.Password);</td>
-                            }
-                            else
-                            {<td>@account.Password;</td>}
-                        }
-                        else
-                        {
-                            <td>@xxx</td>
-                        }
-                        <td>
-                            <button class="btn btn-primary" id="show" @onclick="(()=>ShowPassword(account))">Показать</button>
-                        </td>
-                        <td>
-                            <button class="btn btn-primary" id="change" @onclick="(()=>Change(account,selectedNumber))">Сгенерировать новый пароль</button>
-                        </td>
-                        <td>
-                            <select @bind="selectedNumber">
-                                @for (int i = 6; i < 16; i++)
-                                {
-                                    <option> @i</option>
-                                }
-                            </select>
-                        </td>
-                        <td>
-                            <Button Color="Color.Danger" class="btn btn-2" id="delete" @onclick="(()=>DeleteAccount(account))">Удалить</Button>
-                        </td>
-                    </tr>
-                }
-                <tr>
-                    <td>
-                        <InputText @bind-Value=@_newAccount.Source />
-                    </td>
-                    <td>
-                        <InputText @bind-Value=@_newAccount.Login />
-                    </td>
-                    <td>
-                        <InputText @bind-Value=@_newAccount.Password />
-                    </td>
-                    <td></td>
-                    <td>
-                        <button class="btn btn-primary" id="generate" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
-                    </td>
-                    <td>
-                        <select @bind="selectedNumber">
-                            @for (int i = 6; i < 16; i++)
-                            {
-                                <option> @i</option>
-                            }
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <br />     
-        <br />
-        <button class="btn btn-primary" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
+        <p><em>Loading...</em></p>
     }
-}
-else
-{
-    <p><em>Loading...</em></p>
-}
+
 
 @code {
-    private string _pageTitle = "Вы вошли под пользователем ";
     private int? _userId;
     private string? _nameUser;
     private IEnumerable<Account> accounts = new List<Account>();
