--- a/CourceProject/Components/Pages/ChangePassword.razor
+++ b/CourceProject/Components/Pages/ChangePassword.razor
@@ -49,7 +49,8 @@ else
         _user!.Name = await localStorage.GetItemAsync<string>("userName");
         _user.Id = await localStorage.GetItemAsync<int>("userId");
     }
-    private async void Change()
+    #region метод изменения пароля пользователя
+    private async void Change() // метод изменения пароля пользователя
     {
         _user = await _listUsers.GetUserById(_user!.Id);
         if (passwordEncryptor.Decrypt(_user!.Password!) == changeUserPassword!.CurrentPassword)
@@ -74,6 +75,7 @@ else
             changeUserPassword = new();
         }
     }
+    #endregion
     protected async override Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
