--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -55,23 +55,20 @@
                                 </td>
                                 <td>@account.Login</td>
                                 @if (flag && accountId == account.Id)
-                                {
-                                    @if (account.Password!.Length > 16)
-                                    {
-                                        <td>@passwordEncryptor.Decrypt(account.Password);</td>
-                                    }
-                                    else
-                                    {
-                                        <td>@account.Password;</td>
-                                    }
+                                {                                    
+                                   <td>@passwordEncryptor.Decrypt(account.Password);</td>
+                                    <td>
+                                        <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
+                                    </td>
+                                    
                                 }
                                 else
                                 {
                                     <td>@xxx</td>
+                                    <td>
+                                        <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
+                                    </td>
                                 }
-                                <td>
-                                    <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать</button>
-                                </td>
                                 <td>
                                     <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
                                 </td>
@@ -119,7 +116,6 @@
             <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
                 </div>
                 <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
-
         }
     }
     else
@@ -138,21 +134,21 @@
     private string? xxx="*******";
     private int selectedNumber;
     private bool isConnected;
-    //private string? encryptedPassword;
-    //private string? decryptedPassword;
     private bool checkedValue;
     private List<Account>  arrAccountsDelete = new List<Account>();
     protected override async void OnInitialized()
     {
         accounts = await _listAccounts.GetAccounts();
-        accounts = accounts.Where(a => a.UserId == _userId);
+        accounts = accounts.Where(a => a.UserId == _userId); // показать все аакаунты которые принадлежат данному пользователю
+        accounts = accounts.OrderBy(a => a.Source); // сортировка по алфавиту
     }
-    private void ShowPassword(Account account)
+    private void ShowPassword(Account account) // метод показа пароля
     {
         flag = !flag;
         accountId = account.Id;
     }
-    private async void Change(Account account, int selectedNumber)
+    #region метод изменения пароля
+    private async void Change(Account account, int selectedNumber) // метод изменения пароля
     {
         flag = false;
         Generate(account, selectedNumber);
@@ -161,6 +157,7 @@
         logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
         toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
     }
+    #endregion
     private async Task ReadLocalStorage()
     {
         _nameUser = await localStorage.GetItemAsync<string>("userName");
@@ -181,7 +178,8 @@
             selectedNumber = 8;
         _newAccount.Password = GeneratePassword.Generate(selectedNumber);
     }
-    private async void AddAccount()
+    #region метод добавления нового аккаунта
+    private async void AddAccount() // метод добавления нового аккаунта
     {        
         if (_newAccount.Source != null && _newAccount.Login != null && _newAccount.Password != null && _newAccount.Password.Length>5)
         {
@@ -200,12 +198,15 @@
         else
             toastService.ShowError("Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов");
     }
-    private void DeleteAccount(Account account)
+    #endregion
+    #region метод удаления аккаунта
+    private void DeleteAccount(Account account) // метод удаления аккаунта
     {
         _listAccounts.Delete(account);      
         logger.LogInformation("Удален аккаунт {" + account.Source+"}");
         navigationManager.NavigateTo("/PasswordManager", true);
     }
+    #endregion
     private async void Exit()
     {
         navigationManager.NavigateTo("/Authorization");
