--- a/CourceProject/Components/Pages/Home.razor
+++ b/CourceProject/Components/Pages/Home.razor
@@ -17,18 +17,8 @@
     <br />
     <h5>Данное серверное приложение служит для хранения паролей от разных сервисов, аккаунтов.</h5>
     <img src="Менеджер паролей.jpg" style="width:100%">
-   
-
 </div>
-
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-<br />
+<br /> <br /> <br /> <br /> <br /> <br /> <br />
 
 @code 
 {
@@ -37,7 +27,6 @@
     SendEmailDataModel? sendEmailDataModel;
     int _attemptToSend = 0; // количечтво попыток отправки
     string? dispatchReport; // обратная связь о том что письмо отправлено
-
 
     protected override async Task OnInitializedAsync()
     {
@@ -49,7 +38,6 @@
                 var date1 = DateTime.Now;
                 var date2 = (DateTime)u.LastLoginDate; // получение даты последнего входа пользователей
                 TimeSpan result = date1.Subtract(date2); // результат разницы между date.now и последним входом пользователей
-
                 //if (result.TotalDays >= 183 && result.TotalDays<240) // если со дня последнего входа прошло более 183 суток
                 if (result.Minutes > 2 && u.LongAbsence == false)
                 {
@@ -75,35 +63,26 @@
                                 };
 
                             await Send(); // добавить параметры пользователя для логирования в отправке
-
                         }
-
                         u.LongAbsence = true;
                     }
-                    
                 }
                 if (result.TotalDays > 243 && u.LongAbsence==true)
                 {
                     await Delete(u);
                 }
-
             }
-
-
         }
-
     }
-
-    private async Task Send()
+    #region метод отправки сообщения доверенному лицу
+    private async Task Send() // метод отправки сообщения доверенному лицу
     {
         _attemptToSend++;
         logger.LogInformation("Попытка отправки имейла на адрес {Email}", sendEmailDataModel!.Email);
         try
         {
-
             await sendMessage.SendEmail(sendEmailDataModel);
             dispatchReport = $"Сообщение '{sendEmailDataModel.Subject}' успешно отправлено";
-
             logger.LogInformation("Сообщение на адрес {Email} успешно отправлено", sendEmailDataModel.Email); // сюда
             sendEmailDataModel = new();
         }
@@ -122,8 +101,8 @@
             logger.LogCritical(e, "Ошибка отправки имейла на адрес {Email}. Ошибка: {Error}", sendEmailDataModel.Email, e.Message); // сюда
             dispatchReport = "Ошибка отправки письма";
         }
-
     }
+    #endregion
     private async Task Delete(User user)
     {
         try
@@ -136,8 +115,6 @@
         {
             logger.LogInformation("Возникла ошибка"+ ex.Message);
         }
-       
-
     }
 
 }
